syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message CancelProfileDeletionRequest {
  string profileId = 1;
}

message CancelProfileDeletionResponse {
  string message = 2;
}
